# lvtk

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile  Makefile.config  Makefile.template  README  README.md  RELEASE  TODO  VERSION  configure  daps-gtkui.pc.in  daps-plugin.pc.in  dcvs  groups  liblv2-gtk2gui.pc  lv2-plugin.pc  lv2mm-gtkui.pc.in  lv2mm.pc.in  lvtk-gtk3ui.pc.in  lvtk-gtkui.pc.in  lvtk-plugin.pc.in  lvtk-ui.pc.in  lvtk.pc.in  lvtkui.pc.in  mainpage  manifest.ttl  meson.build  meson_options.txt  paq.pc  project.config  waf  (+1 more)
.reuse/: dep5
bindings/: lvtk.cpp  meson.build  proxy.hpp
bindings/lvtk/: bindings.h  bytes.c  bytes.h  import.lua  include.lua  meson.build  midi.c  object.lua  packed.h  promise.lua  round.c  util.h
daps/: atom.hpp  data_access.hpp  dynmanifest.hpp  event.hpp  extra.hpp  feature.hpp  gtkui.hpp  instance_access.hpp  log.hpp  midi.hpp  patch.hpp  plugin.hpp  resize_port.hpp  state.hpp  synth.hpp  time.hpp  types.hpp  urid.hpp  urimap.hpp  util.hpp  worker.hpp
debian/: README.Debian  changelog  control  copyright  lv2peg.1  rules
demo/: Info.plist  button.hpp  buttons.hpp  demo.cpp  demo.hpp  dials.cpp  embedding.hpp  entry.cpp  four_squares.hpp  images.cpp  main.cpp  menu_bar.hpp  meson.build  sliders.cpp  utils.hpp
demo/res/: meson.build
demo/video/: demo.hpp  display.hpp  engine.cpp  engine.hpp  image_source.cpp  image_source.hpp  smpte_bars.cpp  solid_source.cpp  solid_source.hpp
deploy/: config.xml  control.js  installer.sh  meson.build
deploy/lv2/: meson.build  package.xml
deploy/plugins/: meson.build  package.xml
deploy/sdk/: meson.build  package.xml
doc/: Doxyfile.in  conf.py.in  deployment.rst  development.rst  dynmanifest.rst  extensions.rst  graphics.rst  highlevel.rst  hosting.rst  index.rst  meson.build  overview.rst  overview.rst.in  plugins.rst  projects.rst  reference.doxygen.in  styleguide.rst  summary.rst  uis.rst  view.rst  widgets.rst
doc/api/: meson.build
doc/html/_static/js/: meson.build
doc/ui/: event-loop.rst  events.rst  fonts.rst  main.rst  meson.build  views.rst  widget.rst
examples/: beep.cpp  beep.manifest.ttl.in  beep.ttl  beep_ui.cpp  manifest.ttl.in  silence.cpp  silence.manifest.ttl.in  silence.ttl  silence_ui.cpp  volume.cpp  volume.ttl  volume_ui.cpp  workhorse.cpp  workhorse.manifest.ttl.in  workhorse.ttl  workhorse_ui.cpp  wscript_build
headers/: debug.hpp  lv2-command.h  lv2-gui-programs.h  lv2-gui.h  lv2-saverestore.h  lv2-symbolmap.h  lv2-ui-command.h  lv2-ui-presets.h  lv2-ui.h  lv2.h  lv2_contexts.h  lv2_event.h  lv2_event_helpers.h  lv2_osc.h  lv2_ui_presets.h  lv2_uri_map.h  lv2types.hpp
libs/: lilv.wrap
lv2cxx_common/: atom.hpp  debug.hpp  lv2_event_helpers.h  lv2_osc.h  lv2_saverestore.h  lv2_ui.h  lv2_ui_presets.h  lv2types.hpp  worker.hpp
lv2gui/: lv2-gui.pc  lv2gui.hpp
lv2mm/: atom.hpp  data_access.hpp  dynmanifest.hpp  event.hpp  extra.hpp  feature.hpp  gtkui.hpp  midi.hpp  patch.hpp  plugin.hpp  state.hpp  synth.hpp  time.hpp  types.hpp  urid.hpp  urimap.hpp  util.hpp  worker.hpp
lv2plugin/: lv2-plugin.pc  lv2atom.hpp  lv2plugin.hpp  lv2state.hpp  lv2synth.hpp  lv2urid-map.hpp  lv2urid.hpp  lv2worker.hpp
lvtk/: atom.hpp  buffer_details.hpp  data_access.hpp  dictionary.hpp  dynmanifest.hpp  event.hpp  feature.hpp  gtk3ui.hpp  gtkui.hpp  host_options.hpp  instance.hpp  instance_access.hpp  instance_data.hpp  instance_handle.hpp  log.hpp  logger.hpp  lvtk.hpp  map.hpp  midi.hpp  option.hpp  option_array.hpp  optional.hpp  plugin.hpp  port_resizer.hpp  qt4ui.hpp  resize_port.hpp  schedule.hpp  scheduler.hpp  state.hpp  state_functions.hpp  synth.hpp  time.hpp  types.hpp  ui.hpp  unmap.hpp  uri_directory.hpp  urid.hpp  urimap.hpp  util.hpp  worker.hpp
lvtk.lv2/: import.lua  manifest.ttl  manifest.ttl.in  meson.build  volume-ui.cpp  volume.cpp  volume.ttl  volume_ui.cpp
meson/: gitlab-ci.ini  msvc.ini  osx-deploy.ini  osx-installer.ini  osx-m1.ini  osx-native.ini  osx-universal.ini
meson/pkgconfig/: meson.build
plugins/: manifest.ttl.in  volume.cpp  volume.ttl  wscript_build
scripts/: bin2c.py  bundle.py  date.py  demo.lua  demo.sh  iwyu.imp  iwyu.py  lua2c.py  luavers.py  version.py
src/: gtkui.cpp  meson.build  plugin.cpp  ui.cpp  wscript_build
src/host/: instance_impl.hpp  node.hpp  world.cpp
src/nanovg/: glad.c  meson.build  nanovg.c  nanovg_gl.c
src/nanovg/glad/: glad.h
src/stb/: image.hpp  image.ipp  typeface.hpp
src/ui/: button.cpp  cairo.cpp  embed.cpp  embed.mm  embed_mac.mm  embed_win32.cpp  embed_x11.cpp  entry.cpp  fitment.cpp  font.cpp  gl.hpp  graphics.cpp  image.cpp  main.cpp  nanovg.cpp  nanovg.hpp  opengl.cpp  slider.cpp  style.cpp  view.cpp  vkvg.cpp  widget.cpp
src/ui/detail/: default_style.hpp  embed.hpp  main.hpp  pugl.hpp  view.hpp  widget.hpp
src/ui/res/: meson.build
subprojects/: .gitignore  evg.wrap  lilv.wrap  lua.wrap  lv2.wrap  pugl.wrap  serd.wrap  (+5 more)
test/: atom_test.cpp  bufsize_test.cpp  data_access_test.cpp  descriptor_test.cpp  dynmanifest_test.cpp  host_world_test.cpp  instance_access_test.cpp  log_test.cpp  main.cpp  main_unit.cpp  meson.build  observer_test.cpp  options_test.cpp  state_test.cpp  string_test.cpp  tests.hpp  ui_font_test.cpp  ui_path_test.cpp  urid_test.cpp  weak_ref_test.cpp  worker_test.cpp
test/lua/: PluginInfo.lua  World.lua  bytes.lua  import.lua  include.lua  loadall.lua  meson.build  midi.lua  object.lua  promise.lua  round.lua
tests/: atom.cpp  atom_test.cpp  bufsize.cpp  bufsize_test.cpp  data_access.cpp  data_access_test.cpp  descriptor.cpp  descriptor_test.cpp  dynmanifest.cpp  dynmanifest_test.cpp  instance_access.cpp  instance_access_test.cpp  log_test.cpp  main.cpp  meson.build  options.cpp  options_test.cpp  registration.cpp  signals_test.cpp  state_test.cpp  string_test.cpp  tests.hpp  ui_path_test.cpp  unit_tests.cpp  urid.cpp  urid_test.cpp  weak_ref_test.cpp  worker_test.cpp
util/lualv/: README.md  console.hpp  lua.cpp  main.cpp  meson.build
util/lualv/lua/5.4.4/: meson.build
(+184 files in other folders)
