
option ('lv2dir', type: 'string', value: '', yield : true,
    description: 'LV2 bundle installation directory')
option ('plugins', type: 'feature', value: 'disabled', yield: false,
    description: 'Build plugins')

option ('doc', type : 'feature', value : 'disabled',
    description : 'Build documentation [default: auto]')
option ('onlydocs', type : 'boolean', value : false,
    description : 'Build documentation only')

option ('test', type: 'feature', value: 'auto',
    description: 'Build tests [default: auto]')
option ('demo', type: 'feature', value: 'disabled',
    description: 'Build UI widgets demo')

option ('bindings', type: 'feature', value: 'disabled',
    description: 'Build Lua bindings [default: disabled]')
option ('luadir', type: 'string', value: 'auto',
    description: 'Lua base path for text modules')
option ('luadir_c', type: 'string', value: 'auto',
    description: 'Lua base path for binary modules')
